fixed some hyphenation and units

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1159,9 +1159,9 @@ The visualization in Figure \@ref(fig:03-data-morley-hist-4)
 now makes it quite clear how accurate the different experiments were 
 with respect to one another. 
 The most variable measurements came from Experiment 1. 
-There the measurements ranged from about 650 - 1050 km / sec.
+There the measurements ranged from about 650&ndash;1050 km/sec.
 The least variable measurements came from Experiment 2.
-There, the measurements ranged from about 750 - 950 km / sec.
+There, the measurements ranged from about 750&ndash;950 km/sec.
 The most different experiments still obtained quite similar results!
 
 There are two finishing touches to make this visualization even clearer. First and foremost, we need to add informative axis labels
