copyedit setup chapter

--- a/setup.Rmd
+++ b/setup.Rmd
@@ -3,15 +3,15 @@
 ## Overview
 
 In this chapter, you'll learn how to install all of that software 
-needed to do this data science covered in this book on your own computer.
+needed to do the data science covered in this book on your own computer.
 
 ## Chapter learning objectives
 
 By the end of the chapter, readers will be able to:
 
-- install the Git version control software
-- install and launch a local instance of JupyterLab with the R kernel
-- download the worksheets that accompany the chapters of this book from GitHub
+- Install the Git version control software.
+- Install and launch a local instance of JupyterLab with the R kernel.
+- Download the worksheets that accompany the chapters of this book from GitHub.
 
 ## Installing software on your own computer
 
@@ -22,10 +22,10 @@ we have created instructions for multiple operating systems.
 In particular, the installation instructions below have been verified to work
 on a computer that:
 
-- runs one of the following operating systems: Ubuntu 20.04, macOS Big Sur (version 11.4.x or 11.5.x), Windows 10 Professional, Enterprise or Education (version 2004, 20H2, or 21H1).
-- can connect to networks via a wireless connection
-- uses a 64-bit CPU
-- uses English as the default language
+- runs one of the following operating systems: Ubuntu 20.04, macOS Big Sur (version 11.4.x or 11.5.x), Windows 10 Professional, Enterprise or Education (version 2004, 20H2, or 21H1),
+- can connect to networks via a wireless connection,
+- uses a 64-bit CPU,
+- uses English as the default language.
 
 ### Git
 
@@ -99,7 +99,7 @@ The instructions for the installation will then appear:
 (1) Press Enter.
 (2) Once the license agreement shows, you can press space scroll down or press `q` to skip reading it.
 (3) Type `yes` and press enter to accept the license agreement.
-(4) Press enter to accept the default installation location.
+(4) Press Enter to accept the default installation location.
 (5) Type `yes` and press enter to instruct the installer to run `conda init`, which makes `conda` available from the terminal/shell.
 
 
@@ -134,7 +134,7 @@ conda install -c conda-forge -y r-irkernel
 ```
 
 To improve the experience of using R in JupyterLab, we will add an extension 
-that allows us to setup keyboard shortcuts for inserting text.
+that allows us to set up keyboard shortcuts for inserting text.
 By default, 
 this extension creates shortcuts for inserting two of the most common R 
 operators: `<-` and `|>`. Type the following in the Anaconda Prompt (Windows)
@@ -185,10 +185,10 @@ sudo chown -R $(whoami):admin /usr/local/bin
 >  **Note:** You might be asked to enter your password during installation.
 
 **All operating systems:** 
-To install LaTeX open JupyterLab by typing `jupyter lab` 
-in the Anaconda Prompt (Windows) or terminal (MacOS and Ubuntu) and press enter.
-Then from JupyterLab open an R console and type the commands listed below and 
-press `Shift` + `enter` to install `tinytex`:
+To install LaTeX, open JupyterLab by typing `jupyter lab` 
+in the Anaconda Prompt (Windows) or terminal (MacOS and Ubuntu) and press Enter.
+Then from JupyterLab, open an R console, type the commands listed below, and 
+press Shift + Enter to install `tinytex`:
 
 ```
 tinytex::install_tinytex()
