copyediting jupyter chp

--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -18,7 +18,7 @@ with the text and images serving as narration for the code and its output.
 In this chapter we will show you how to accomplish this using Jupyter notebooks, a common coding platform in 
 data science. Jupyter notebooks do precisely what we need: they let you combine text, images, and (executable!) code in a single
 document. In this chapter, we will focus on the *use* of Jupyter notebooks to program in R and write
-text via a web-interface. 
+text via a web interface. 
 These skills are essential to getting your analysis running; think of it like getting dressed in the morning!
 Note that we assume that you already have Jupyter set up and ready to use. If that is not the case, please first read
 Chapter \@ref(move-to-your-own-machine) to learn how to install and configure Jupyter on your own
@@ -26,13 +26,13 @@ computer.
 
 ## Chapter learning objectives
 
-By the end of the chapter, readers will be able to:
+By the end of the chapter, readers will be able to do the following:
 
-- create new Jupyter notebooks
-- write, edit, and execute R code in a Jupyter notebook
-- write, edit, and view text in a Jupyter notebook
-- open and view plain text data files in Jupyter
-- export Jupyter notebooks to other standard file types (e.g., `.html`, `.pdf`)
+- Create new Jupyter notebooks.
+- Write, edit, and execute R code in a Jupyter notebook.
+- Write, edit, and view text in a Jupyter notebook.
+- Open and view plain text data files in Jupyter.
+- Export Jupyter notebooks to other standard file types (e.g., `.html`, `.pdf`).
 
 ## Jupyter
 
@@ -42,7 +42,7 @@ documents that contain a mix of computer code (and its output) and formattable
 text. Given that they combine these two analysis artifacts in a single 
 document&mdash;code is not separate from the output or written report&mdash;notebooks are 
 one of the leading tools to create reproducible data analyses. Reproducible data 
-analysis \index{reproducible} is one where you can reliably and easily recreate the same results when 
+analysis \index{reproducible} is one where you can reliably and easily re-create the same results when 
 analyzing the same data. Although this sounds like something that should always 
 be true of any data analysis, in reality, this is not often the case; one needs 
 to make a conscious effort to perform data analysis in a reproducible manner.
@@ -100,7 +100,7 @@ workflow typically used to ensure that your analysis runs in its entirety before
 sharing it with others, and when using a notebook as part of an automated 
 process.
 
-To run the a code cell independently, the cell needs to first be activated. This
+To run a code cell independently, the cell needs to first be activated. This
 is done by clicking on it with the cursor. Jupyter will indicate a cell has been
 activated by highlighting it with a blue rectangle to its left. After the cell
 has been activated (Figure \@ref(fig:activate-and-run-button)), the cell can be run by either pressing the **Run** (`r fa("play", height = "11px")`) 
@@ -247,8 +247,9 @@ notebook that references `y` and execute it without error in the current session
 (Figure \@ref(fig:out-of-order-2)). This could also be done successfully in 
 future sessions if, and only if, you run the cells in the same non-conventional 
 order. However, it is difficult to remember this non-conventional order, and it 
-is not the order that others would expect your code to be executed in. Thus in 
-future this would lead to errors when the notebook is run in the conventional 
+is not the order that others would expect your code to be executed in. Thus, in 
+the future, this would lead 
+to errors when the notebook is run in the conventional 
 linear order (Figure \@ref(fig:out-of-order-3)).
 
 ```{r out-of-order-1, echo = FALSE, fig.cap = "Code that was written out of order, but not yet executed.", fig.retina = 2, out.width="100%"}
@@ -256,7 +257,7 @@ image_read("img/out-of-order-1.png") |>
   image_crop("3632x800")
 ```
 
-```{r out-of-order-2, echo = FALSE, fig.cap = "Code that was written out of order, and was executed using the run button in a nonlinear error without error. The order of execution can be traced by following the numbers to the left of the code cells; their order indicates the order in which the cells were executed.", fig.retina = 2, out.width="100%"}
+```{r out-of-order-2, echo = FALSE, fig.cap = "Code that was written out of order, and was executed using the run button in a nonlinear order without error. The order of execution can be traced by following the numbers to the left of the code cells; their order indicates the order in which the cells were executed.", fig.retina = 2, out.width="100%"}
 image_read("img/out-of-order-2.png") |> 
   image_crop("3632x800")
 ```
@@ -404,8 +405,9 @@ image_read("img/launcher-annotated.png") |>
 
 Once you have created a new Jupyter notebook, be sure to give it a descriptive 
 name, as the default file name is `Untitled.ipynb`. You can rename files by 
-right-clicking on the file name of the Jupyter notebook you just created and 
-click **Rename**. This will make the file name editable. Use your keyboard to 
+first right-clicking on the file name of the notebook you just created, and 
+then clicking **Rename**. This will make 
+the file name editable. Use your keyboard to 
 change the name. Pressing `Enter` or clicking anywhere else in the Jupyter 
 interface will save the changed file name.
 
