--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -395,7 +395,7 @@ variable we predict given a unit increase in the predictor
 variable. KNN regression, as simple as it is to implement and understand, has no such
 interpretability from its wiggly line. 
 
-There can however also be a disadvantage to using a simple linear regression
+There can, however, also be a disadvantage to using a simple linear regression
 model in some cases, particularly when the relationship between the target and
 the predictor is not linear, but instead some other shape (e.g., curved or oscillating). In 
 these cases the prediction model from a simple linear regression
