adding to do the following in learning objectives

--- a/setup.Rmd
+++ b/setup.Rmd
@@ -7,7 +7,7 @@ needed to do the data science covered in this book on your own computer.
 
 ## Chapter learning objectives
 
-By the end of the chapter, readers will be able to:
+By the end of the chapter, readers will be able to do the following:
 
 - Install the Git version control software.
 - Install and launch a local instance of JupyterLab with the R kernel.
