fixed size of points in Fig 9.11, made centers slightly bigger in Fig 9.8 and 9.10

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -464,7 +464,7 @@ for (i in 1:4) {
                aes(y = bill_length_standardized, 
                                    x = flipper_length_standardized, 
                                    fill = label), 
-               size = 3, 
+               size = 4, 
                shape = 21, 
                stroke = 1, 
                color = "black", 
@@ -498,7 +498,7 @@ for (i in 1:4) {
     geom_point(data = centers, 
                aes(y = bill_length_standardized, 
                    x = flipper_length_standardized, fill = label), 
-               size = 3, 
+               size = 4, 
                shape = 21, 
                stroke = 1, 
                color = "black", 
@@ -637,7 +637,7 @@ for (i in 1:5) {
     geom_point(data = centers, aes(y = bill_length_standardized, 
                                    x = flipper_length_standardized, 
                                    fill = label), 
-               size = 3, 
+               size = 4, 
                shape = 21, 
                stroke = 1, 
                color = "black", 
@@ -670,7 +670,7 @@ for (i in 1:5) {
     geom_point(data = centers, aes(y = bill_length_standardized, 
                                    x = flipper_length_standardized, 
                                    fill = label), 
-               size = 3, 
+               size = 4, 
                shape = 21, 
                stroke = 1, 
                color = "black", 
@@ -811,7 +811,7 @@ levels(clusters$k) <- clusters_levels
 
 p1 <- ggplot(assignments, aes(flipper_length_standardized, 
                               bill_length_standardized)) +
-  geom_point(aes(color = .cluster, size = 1)) +
+  geom_point(aes(color = .cluster, size = I(2))) +
   facet_wrap(~k) +   scale_color_manual(values = cbbPalette) +
   labs(x = "Flipper Length (standardized)", 
        y = "Bill Length (standardized)", 
@@ -820,7 +820,7 @@ p1 <- ggplot(assignments, aes(flipper_length_standardized,
   geom_point(data = clusters, 
              aes(fill = cluster), 
              color = "black", 
-             size = 5, 
+             size = 4, 
              shape = 21, 
              stroke = 1) + 
   scale_fill_manual(values = cbbPalette)
